--- a/photography-world/src/assets/css/main/main.css
+++ b/photography-world/src/assets/css/main/main.css
@@ -1,5 +1,6 @@
 body {
     background-color: #0c1222 !important;
+    /* background-color: #fff !important; */
 }
 
 /*! Navbar customize  */
@@ -76,7 +77,7 @@ body {
     background-position: center;
     background-size: cover;
     width: 300px;
-    height: 250px;
+    height: 245px;
 }
 
 .swiper-slide img {
