--- a/photography-world/src/assets/css/main/main.css
+++ b/photography-world/src/assets/css/main/main.css
@@ -67,7 +67,7 @@ body {
 }
 
 .service-details-img {
-    height: 400px !important;
+    height: 500px !important;
     width: 800px !important;
     cursor: pointer;
 }
@@ -75,6 +75,50 @@ body {
 .service-bg-layer {
     background-color: rgb(0 0 0 / 86%) !important;
 }
+
+/*# service add rating-star  */
+.rate {
+    float: left;
+    height: 46px;
+    padding: 0 10px;
+}
+
+.rate:not(:checked)>input {
+    position: absolute;
+    top: -9999px;
+}
+
+.rate:not(:checked)>label {
+    float: right;
+    width: 1em;
+    overflow: hidden;
+    white-space: nowrap;
+    cursor: pointer;
+    font-size: 30px;
+    color: #ccc;
+}
+
+.rate:not(:checked)>label:before {
+    content: '★ ';
+}
+
+.rate>input:checked~label {
+    color: #ffc700;
+}
+
+.rate:not(:checked)>label:hover,
+.rate:not(:checked)>label:hover~label {
+    color: #deb217;
+}
+
+.rate>input:checked+label:hover,
+.rate>input:checked+label:hover~label,
+.rate>input:checked~label:hover,
+.rate>input:checked~label:hover~label,
+.rate>label:hover~input:checked~label {
+    color: #c59b08;
+}
+
 
 /*! customer review slider */
 
