--- a/photography-world/src/assets/css/main/main.css
+++ b/photography-world/src/assets/css/main/main.css
@@ -41,6 +41,37 @@ body {
     box-shadow: none !important;
 }
 
+/*! customer review slider */
+
+.swiper {
+    width: 100%;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.swiper-slide {
+    background-position: center;
+    background-size: cover;
+    width: 300px;
+    height: 250px;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+}
+
+/*! home-bottom-banner */
+.home-bottom-banner {
+    background: url('../../imgs/banner/banner2.png');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.bg-layer {
+    background-color: #00000082;
+}
 
 /*! service-card */
 .custom-card {
@@ -68,7 +99,7 @@ body {
 
 .service-details-img {
     height: 500px !important;
-    width: 800px !important;
+    width: 100% !important;
     cursor: pointer;
 }
 
@@ -119,39 +150,14 @@ body {
     color: #c59b08;
 }
 
-
-/*! customer review slider */
-
-.swiper {
-    width: 100%;
-    padding-top: 50px;
-    padding-bottom: 50px;
+/*# service review card  */
+.review-card-boxShadow {
+    box-shadow: 5px 6px 17px #000 !important;
 }
 
-.swiper-slide {
-    background-position: center;
-    background-size: cover;
-    width: 300px;
-    height: 250px;
+.main-review-card {
+    background-color: #0c1222 !important;
 }
-
-.swiper-slide img {
-    display: block;
-    width: 100%;
-}
-
-/*! home-bottom-banner */
-.home-bottom-banner {
-    background: url('../../imgs/banner/banner2.png');
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-.bg-layer {
-    background-color: #00000082;
-}
-
 
 /*! auth-card */
 .auth-card {
@@ -162,7 +168,6 @@ body {
     background: #1e2b47 !important;
     color: #fff !important;
 }
-
 
 /*! footer  */
 
